Using variables instead of secrets for non sensible data

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+# Secret - Keep this private!
 APIFY_API_TOKEN=your_apify_api_token_here
-LINKEDIN_USERNAME=alexcerezocontreras
-MAX_CARDS_TO_GENERATE=4 # Even number recommended
+
+# Variables - Can be public
+LINKEDIN_USERNAME=your_linkedin_username
+MAX_CARDS_TO_GENERATE=4
 LANGUAGE=en
