feat: add support for simple reposts and corresponding templates

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ LANGUAGE=en  # Options: en, es, fr, de
 
 # Development/Testing
 USE_MOCK_DATA=false  # Set to 'true' to use mock data instead of calling the API (saves costs during development)
+
+INCLUDE_SIMPLE_REPOSTS=false # Set to 'true' to include simple reposts (reshares without commentary) when generating cards
