Customize the posts you are to generate

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,7 @@ APIFY_API_TOKEN=your_apify_api_token_here
 LINKEDIN_USERNAME=your_linkedin_username
 MAX_CARDS_TO_GENERATE=4
 LANGUAGE=en  # Options: en, es, fr, de
+INCLUDE_REPOSTS=true # Set to 'true' to include reposts
 
 # Development/Testing
 USE_MOCK_DATA=false  # Set to 'true' to use mock data instead of calling the API (saves costs during development)
-
-INCLUDE_SIMPLE_REPOSTS=false # Set to 'true' to include simple reposts (reshares without commentary) when generating cards
